infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
 name: foodiehub
 labels:
  name: foodiehub
  app: foodiehub-restaurant
