infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodiehub-frontend-service
  namespace: foodiehub
spec:
  selector:
    app: foodiehub-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
