infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodiehub-service
  namespace: foodiehub
spec:
 type: LoadBalancer
 selector:
  app: foodiehub-backend
 ports:
 - port: 80
   targetPort: 8080
   protocol: TCP
   name: http
