infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: foodiehub-ingress
 namespace: foodiehub
 annotations:
  kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: foodiehub.local
   http:
    paths:
    - path: /
    pathType: Prefix
    backend:
     service:
     name: foodiehub-service
     port:
      number: 80
